[package]
name = "asearch"
version = "0.1.1"
authors = ["takker99 <37929109+takker99@users.noreply.github.com>"]
repository = "https://github.com/takker99/rust-asearch"
description = "Approximate pattern matching on Rust"
license-file = "LICENSE"
readme = "README.md"
edition = "2018"
categories = ["algorithms"]
keywords = ["bitap", "search", "fuzzy", "match", "asearch"]

[badges]
github = { repository = "takker99/rust-asearch", workflow = "Rust" }
